--- a/public/style.css
+++ b/public/style.css
@@ -6,11 +6,12 @@
 
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 0.9em;
   line-height: 1.42857143;
   color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #efefef;
 }
 
 html, body {
@@ -18,4 +19,14 @@ html, body {
   margin: 0px;
   height: 100%;
   min-height: 100%;
+}
+
+body a {
+  color: white;
+  text-decoration: none;
+}
+
+* {
+  min-height: 0;
+  min-width: 0;
 }
