Added page content

--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,22 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding-top: 30px;
 }
 
 .app-content-page-text a{
   color: deepskyblue;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.product-container {
-  width: 100%;
-  padding: 20px;
+.app-content-page-text img{
+  width: 150px;
+  height: 150px;
+  padding: 10px;
 }
 
 /* 4k Screen */
